  tournament match buy-in.

--Fixed bug in links to tournament reports in admin interface.

--Added automatic daily tournaments.

--tournament_report and prize preview with no code name now shows current
  tournament.

--Fixed so that everyone gets their entry fee back if no one has high enough
  profit to receive a prize.

--Added list of upcoming tournaments.




Version 26     2015-May-25

--Disabled experimental suited game mode.




Version 25     Live Server Fixes

--Stat that counts how many experimental-mode games are played.




Version 25     2015-May-18

--Added experimental 1-9 suited game mode.




Version 24     2015-May-15

--Fixed so that Cabal points symbol not displayed with bad point value when
  depositing into exiting account.

--Changed to clear payment information from client after each payment or when
  user backs out of deposit screen (thanks Chris H).

--Support for list of languages in language.txt where the top language is the
  main one, and subsequent languages augment the translation by providing
  strings only for missing keys.  Thus, English can serve as a backup language
  for an incomplete translation (thanks Jimmy G).

--Fixed picker weird behavior when multiple mouse buttons are pressed and
  released (in some cases, this could cause a picker to settle off a column,
  triggering a crash on commit) (thanks John C).





Version 23     Live Server Fixes

--Cabal compensation points now awarded automatically.

--Added mega-skips to log paging.

--Added better handling of unsupported currencies when sending checks.

--Now emails admin whenever a check goes out (and also when check request 
  fails).

--Fixed player pot listings in endOldGames logging.

--Fixed DENIED when folding after opponent left (thanks Christian E).

--Added Message-Id and Date headers to outgoing emails to prevent
  spam flagging.

--Fixed so that Cabal compensation points given whenever Cabal member's score